fix: 리팩토링 후 테스트 코드 수정